update backend to use postgres

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,13 @@
 # FastAPI and Server
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+python-multipart==0.0.9
 
 # Database
-sqlalchemy==2.0.23
+sqlalchemy==2.0.25
 
 # HTTP Client
-httpx==0.25.2
+httpx==0.26.0
 
 # Task Scheduling
 APScheduler==3.10.4
@@ -16,6 +16,7 @@ APScheduler==3.10.4
 python-dotenv==1.0.0
 
 # TastyTrade API
+tastytrade==8.2.0
 requests==2.31.0
 
 # Data Processing
@@ -28,11 +29,8 @@ python-dateutil==2.8.2
 # Logging
 colorlog==6.8.0
 
-# CORS
-fastapi-cors==0.0.6
-
-# Validation
-pydantic==2.5.0
+# Validation (compatible with tastytrade 8.2 requirement of >=2.6.3)
+pydantic==2.6.3
 email-validator==2.1.0
 
 # WebSocket support (optional)
