update tasty sdk version

--- a/env.template
+++ b/env.template
@@ -1,7 +1,8 @@
-# TastyTrade API Configuration
-# Get your credentials at: https://developer.tastytrade.com/
-TASTY_USERNAME=your_tastytrade_username
-TASTY_PASSWORD=your_tastytrade_password
+# TastyTrade API Configuration (OAuth)
+# Get your OAuth credentials at: https://developer.tastytrade.com/
+# You need to create an OAuth application to get client_secret and refresh_token
+TASTY_CLIENT_SECRET=your_oauth_client_secret
+TASTY_REFRESH_TOKEN=your_oauth_refresh_token
 TASTY_ACCOUNT_NUMBER=your_account_number
 
 # Trading Mode
