update backend settings

--- a/env.template
+++ b/env.template
@@ -24,7 +24,7 @@ CORS_ORIGINS=http://localhost:3000
 DATABASE_PATH=backend/data/trading_bot.db
 
 # Logging Configuration
-LOG_LEVEL=INFO
+LOG_LEVEL=DEBUG
 LOG_PATH=backend/data/logs
 
 # Risk Management
@@ -32,6 +32,7 @@ MAX_DAILY_LOSS=2000
 MAX_TOTAL_POSITIONS=10
 
 # Options Selection
+# 0 DTE means options expiring today, 7 means up to 7 days out
 DAYS_TO_EXPIRATION_MIN=0
 DAYS_TO_EXPIRATION_MAX=7
 
