--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,40 +1,51 @@
-# FastAPI and Server
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-python-multipart==0.0.9
-
-# Database
-sqlalchemy==2.0.25
-
-# HTTP Client
-httpx==0.28.1
-
-# Task Scheduling
+annotated-types==0.7.0
+anyio==4.11.0
 APScheduler==3.10.4
-
-# Environment Variables
-python-dotenv==1.0.0
-
-# HTTP Client for TastyTrade API (direct API calls)
-requests==2.31.0
-
-# Data Processing
-pandas==2.1.4
-numpy==1.26.2
-
-# Utilities
-python-dateutil==2.8.2
-
-# Logging
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
 colorlog==6.8.0
-
-# Validation (compatible with tastytrade 8.2 requirement of >=2.6.3)
-pydantic==2.11.9
+dnspython==2.8.0
 email-validator==2.1.0
-
-# WebSocket support (optional)
-websockets==15.0.1
-
-# Development
+exchange_calendars==4.11.1
+fake-useragent==2.2.0
+fastapi==0.109.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+iniconfig==2.3.0
+korean-lunar-calendar==0.3.1
+numpy==1.26.2
+packaging==25.0
+pandas==2.1.4
+pandas_market_calendars==5.1.1
+pluggy==1.6.0
+pydantic==2.11.9
+pydantic_core==2.33.2
+pyluach==2.3.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.9
+pytz==2025.2
+PyYAML==6.0.3
+requests==2.31.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.25
+starlette==0.35.1
+tastytrade==11.0.0
+toolz==1.1.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+uvicorn==0.27.0
+watchfiles==1.1.1
+websockets==15.0.1
