--- a/env.template
+++ b/env.template
@@ -18,7 +18,8 @@ DEFAULT_THRESHOLD=0.5
 # Server Configuration
 PORT=5000
 DEBUG=true
-CORS_ORIGINS=http://localhost:3000
+# Comma-separated list of allowed origins for CORS
+CORS_ORIGINS=http://localhost:3000,https://option-trading-bot.vercel.app,https://optionbotapi.duckdns.org
 
 # Database Configuration
 DATABASE_PATH=backend/data/trading_bot.db
